# ahma_mcp

./: .debtmap.toml  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_UPGRADE_PLAN.md  CANCELLATION_INVESTIGATION.md  CLAUDE.md  COLORED_OUTPUT_FEATURE.md  Cargo.toml  DEVELOPMENT_WORKFLOW.md  LESSONS_LEARNED.md  PROJECT_COMPLETION.md  README.md  REQUIREMENTS.md  SPEC.md  STREAMLINING.md  TROUBLESHOOTING.md  VSCODE_TESTING.md  add_logging_to_tests.sh  agent-plan.md  ahma-mcp-critique.md  async-cargo-mcp-critique.md  comparison-report.md  compliance-report.md  comprehensive_tool_test.py  debug_git_parsing.rs  debug_nextest.sh  debug_shell_issue.rs  debug_test.rs  debug_validation.rs  default_10719471237267511782_0_61437.profraw  default_15398716320270842362_0_88167.profraw  default_15398716320270842362_0_90103.profraw  fix_tests.py  requirements.md  simple_debug.rs  test_config.rs  test_http_bridge.sh  test_mcp.py  test_server.sh  (+3 more)
ahma_code_health/: Cargo.toml  README.md  REQUIREMENTS.md
ahma_code_health/src/: main.rs  models.rs  report.rs
ahma_code_health/tests/: report_integration_test.rs
ahma_code_simplicity/: Cargo.toml  README.md  REQUIREMENTS.md  SPEC.md
ahma_code_simplicity/src/: analysis.rs  lib.rs  main.rs  models.rs  report.rs
ahma_code_simplicity/tests/: report_integration_test.rs
ahma_core/: Cargo.toml  README.md
ahma_core/--help/: mtdf-schema.json
ahma_core/docs/: mtdf-schema.json
ahma_core/examples/: README.md  cargo_tool.rs  file_tools.rs  gh_tool.rs  git_tool.rs  gradlew_tool.rs  python_tool.rs
ahma_core/src/: adapter.rs  callback_system.rs  client.rs  config.rs  constants.rs  lib.rs  mcp_callback.rs  mcp_service.rs  operation_monitor.rs  path_security.rs  retry.rs  sandbox.rs  schema_validation.rs  shell_pool.rs  terminal_output.rs  test_utils.rs  tool_availability.rs  transport_patch.rs
ahma_core/tests/: adapter_comprehensive_test.rs  adapter_coverage_expansion_test.rs  adapter_coverage_improvement_test.rs  adapter_extended_coverage_test.rs  adapter_retry_integration_test.rs  adapter_sandbox_scope_regression_test.rs  adapter_test.rs  adapter_tests.rs  advanced_await_functionality_test.rs  ai_callback_clarity_test.rs  android_gradlew_test.rs  async_callback_notification_test.rs  async_notification_debug.rs  async_notification_delivery_test.rs  await_fix_verification_test.rs  await_manual_verification_test.rs  callback_system_test.rs  cancel_tool_message_test.rs  cancellation_reason_test.rs  cargo_lock_permission_regression_dual_mode_test.rs  cargo_quality_check_subcommand_test.rs  cli_binary_integration_test.rs  cli_extended_integration_test.rs  cli_mode_coverage_test.rs  cli_pure_functions_test.rs  client_coverage_expansion_test.rs  client_coverage_test.rs  clippy_test.rs  comprehensive_tool_fixes_tdd.rs  config_coverage_test.rs  config_reload_test.rs  config_test.rs  config_tests.rs  continuous_update_test.rs  development_workflow_invariants_test.rs  endless_notification_fix_test.rs  enhanced_await_tool_test.rs  file_tools_integration_test.rs  file_tools_ls_bug_test.rs  freeform_args_test.rs  (+100 more)
ahma_http_bridge/: COLORED_OUTPUT.md  Cargo.toml  README.md  requirements.md
ahma_http_bridge/src/: bridge.rs  error.rs  lib.rs  main.rs  request_handler.rs  session.rs
ahma_http_bridge/test_target/: .rustc_info.json
ahma_http_bridge/tests/: cargo_tool_integration_test.rs  fast_error_response_test.rs  handshake_concurrency_test.rs  handshake_replay_test.rs  handshake_state_machine_test.rs  handshake_timeout_test.rs  http_bridge_integration_test.rs  http_initialize_validation_integration_test.rs  http_roots_handshake_integration_test.rs  progress_token_http_integration_test.rs  sandbox_roots_handshake_stress_test.rs  sandbox_roots_handshake_test.rs  sandbox_security_test.rs  session_coverage_test.rs  session_delete_test.rs  session_sandbox_test.rs  session_stress_test.rs  sse_endpoint_test.rs  sse_file_tools_tests.rs  sse_git_tests.rs  sse_python_tests.rs  sse_shell_tests.rs  sse_stress_tests.rs  sse_tool_integration_test.rs
ahma_http_mcp_client/: Cargo.toml  README.md  REQUIREMENTS.md  coverage.html
ahma_http_mcp_client/examples/: README.md  atlassian_client.rs  oauth_mcp_client.rs  stress_test.rs
ahma_http_mcp_client/src/: client.rs  error.rs  lib.rs  sse.rs
ahma_http_mcp_client/tests/: http_client_transport_test.rs
ahma_http_mcp_server/: Cargo.toml  IMPLEMENTATION_NOTES.md  README.md  STATUS.md
ahma_http_mcp_server/src/: cert.rs  check_import.rs  check_server.rs  error.rs  handler.rs  http2_server.rs  http3_server.rs  lib.rs  main.rs  server.rs
ahma_list_tools/: Cargo.toml  README.md  requirements.md
ahma_list_tools/src/: main.rs
ahma_list_tools/tests/: integration_test.rs
ahma_mcp/: Cargo.toml  README.md
ahma_mcp/--help/: mtdf-schema.json
ahma_mcp/examples/: README.md  file-tools.rs  file_tools.rs  gh_tool.rs  git_tool.rs  gradlew_tool.rs  python_tool.rs  rust_tool.rs
ahma_mcp/src/: adapter.rs  callback_system.rs  check_service_ext.rs  client.rs  client_type.rs  config.rs  constants.rs  lib.rs  log_monitor.rs  mcp_callback.rs  operation_monitor.rs  retry.rs  sandbox.rs  schema_validation.rs  terminal_output.rs  test_utils.rs  tool_availability.rs  tool_hints.rs  transport_patch.rs
ahma_mcp/tests/: adapter_extended_coverage_test.rs  adapter_retry_integration_test.rs  adapter_sandbox_scope_regression_test.rs  ai_callback_clarity_test.rs  builtin_tools_test.rs  callback_system_test.rs  cli_binary_integration_test.rs  cli_coverage_test.rs  cli_extended_integration_test.rs  cli_mode_coverage_test.rs  cli_pure_functions_test.rs  client_coverage_expansion_test.rs  client_coverage_test.rs  config_coverage_test.rs  config_reload_test.rs  development_workflow_invariants_test.rs  file_tools_integration_test.rs  file_tools_schema_validation_test.rs  freeform_args_test.rs  (+64 more)
ahma_shell/: Cargo.toml  README.md  requirements.md
ahma_simplify/: Cargo.toml  README.md  SPEC.md
ahma_validate/: Cargo.toml  README.md  requirements.md
generate_schema/: Cargo.toml
generate_tool_schema/: Cargo.toml  README.md  requirements.md
(+534 files in other folders)
