[workspace]
default-members = [
  "ahma_core",
  "ahma_validate",
  "generate_tool_schema",
  "ahma_http_bridge",
  "ahma_http_mcp_client",
]
# exclude = ["ahma_http_mcp_server"]
members = ["ahma_core", "ahma_validate", "generate_tool_schema", "ahma_http_bridge", "ahma_http_mcp_client"]
resolver = "2"

[workspace.package]
authors = ["Paul Houghton <paulirotta@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.90.0"
version = "0.4.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = {version = "0.4.42", features = ["serde"]}
directories = "6.0.0"
futures = "0.3.31"
landlock = "0.4.4"
regex = "1.12.2"
rmcp = {version = "0.12.0", features = ["server", "client", "macros", "transport-io", "transport-child-process", "elicitation", "schemars"]}
schemars = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread", "process", "fs", "signal"]}
tokio-util = "0.7.17"
toml = "0.9.10"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
# CLI dependencies
clap = {version = "4.5.53", features = ["derive"]}
ctrlc = "3.4.6"
dirs = "6.0.0"
reqwest = {version = "0.12.26", default-features = false}
url = "2.5.7"

[profile.coverage]
debug = true
inherits = "dev"
opt-level = 0
