[workspace]
default-members = [
    "ahma_mcp",
    "ahma_validate",
    "generate_tool_schema",
    "ahma_http_bridge",
    "ahma_http_mcp_client",
]
members = [
    "ahma_mcp",
    "ahma_validate",
    "generate_tool_schema",
    "ahma_http_bridge",
    "ahma_http_mcp_client",
]
resolver = "3"

[workspace.package]
authors = ["Paul Houghton <paulirotta@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.90.0"
version = "0.4.3"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
ctrlc = "3.5.1"
directories = "6.0.0"
dirs = "6.0.0"
futures = "0.3.31"
landlock = "0.4.4"
opentelemetry = { version = "0.26", features = ["trace"] }
opentelemetry-otlp = { version = "0.26", features = [
    "http-proto",
    "reqwest-rustls",
] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
regex = "1.12.3"
reqwest = { version = "0.13.1", default-features = false }
rmcp = { version = "0.14.0", features = [
    "server",
    "client",
    "macros",
    "transport-io",
    "transport-child-process",
    "elicitation",
    "schemars",
] }
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.149"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "fs",
    "signal",
] }
tokio-util = "0.7.18"
toml = "0.9.11"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-opentelemetry = "0.27"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
