[package]
name = "ahma_code_simplicity"
description = "Code simplicity metrics aggregator using rust-code-analysis-cli"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "ahma_code_simplicity"
path = "src/lib.rs"

[[bin]]
name = "ahma_code_simplicity"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
toml = { workspace = true }
walkdir = "2.5"
pulldown-cmark = "0.13.0"
opener = "0.8.4"

[dev-dependencies]
tempfile = { workspace = true }
