[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "ahma_core"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "ahma_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
directories.workspace = true
futures.workspace = true
regex.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
rand = "0.9.2"

[target.'cfg(target_os = "linux")'.dependencies]
landlock.workspace = true

[dev-dependencies]
futures.workspace = true
tempfile.workspace = true

[features]
android = []
default = ["android"]
