[package]
name = "ahma_http_bridge"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.7", features = ["http2", "tokio"] }
bytes = "1.9"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util", "process", "sync"] }
tokio-util = { workspace = true, features = ["io", "codec"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing.workspace = true
