[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "ahma_http_bridge"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum = {version = "0.8.8", features = ["http2", "tokio"]}
bytes = "1.11"
chrono.workspace = true
clap = {workspace = true, features = ["derive"]}
dashmap = "6.1.0"
futures.workspace = true
owo-colors = "4.2.3"
serde = {workspace = true, features = ["derive"]}
serde_json.workspace = true
thiserror.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "io-util", "process", "sync"]}
tokio-stream = {version = "0.1.17", features = ["sync"]}
tokio-util = {workspace = true, features = ["io", "codec"]}
tower-http = {version = "0.6", features = ["trace", "cors"]}
tracing-subscriber = {workspace = true, features = ["env-filter"]}
tracing.workspace = true
uuid = {version = "1.19.0", features = ["v4", "serde"]}

[dev-dependencies]
futures.workspace = true
reqwest = {workspace = true, features = ["json", "stream"]}
tempfile.workspace = true
tower = {version = "0.5.2", features = ["util"]}
urlencoding = "2.1"
