[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "ahma_http_bridge"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.8", features = ["http2", "tokio"] }
bytes = "1.11"
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
dashmap = "6.1.0"
futures.workspace = true
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true, optional = true }
owo-colors = "4.2.3"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "process",
    "sync",
] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { workspace = true, features = ["io", "codec"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
uuid = { version = "1.20.0", features = ["v4", "serde"] }

[features]
opentelemetry = [
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
ahma_mcp = { path = "../ahma_mcp" }
futures.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
tempfile.workspace = true
tower = { version = "0.5.3", features = ["util"] }
urlencoding = "2.1"
