[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "ahma_shell"
readme = "../README.md"
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "ahma_mcp"
path = "src/main.rs"

[dependencies]
ahma_core = {path = "../ahma_core"}
anyhow.workspace = true
clap.workspace = true
directories.workspace = true
rmcp.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
