[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "ahma_shell"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "ahma_mcp"
path = "src/main.rs"

[dependencies]
ahma_core = {path = "../ahma_core"}
ahma_http_bridge = { path = "../ahma_http_bridge" }
ahma_http_mcp_client = { path = "../ahma_http_mcp_client" }
anyhow.workspace = true
clap.workspace = true
dirs = "6.0.0"
directories.workspace = true
reqwest = { version = "0.12.26", features = ["json", "rustls-tls"] }
rmcp = { workspace = true, features = ["client", "transport-child-process"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url = "2.5.7"

[dev-dependencies]
tempfile.workspace = true
