[package]
edition.workspace = true
license.workspace = true
name = "ahma_validate"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "ahma_validate"
path = "src/main.rs"

[dependencies]
ahma_core = {path = "../ahma_core"}
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
