[package]
edition.workspace = true
license.workspace = true
name = "generate_schema"
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "generate_schema"
path = "src/main.rs"

[dependencies]
ahma_core = {path = "../ahma_core"}
schemars = "1.1"
serde_json = "1.0"
