[package]
edition.workspace = true
license.workspace = true
name = "generate_tool_schema"
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "generate_tool_schema"
path = "src/main.rs"

[dependencies]
ahma_core = {path = "../ahma_core"}
schemars = "1.1"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
