[package]
name = "metrics-aggregator"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
pulldown-cmark = "0.13.0"
opener = "0.8.4"
chrono = "0.4"
